--- a/html.html
+++ b/html.html
@@ -1,1 +1,1 @@
-<iframe src="https://www.w3schools.com/html/html_iframe.asp" title="description"></iframe>
+<iframe src="https://surviv.io/" height="200" width="300" title="Iframe Example"></iframe>
