--- a/html.html
+++ b/html.html
@@ -1,1 +1,73 @@
-<iframe src="https://surviv.io/" height="200" width="300" title="Iframe Example"></iframe>
+<script>
+  var canvas = document.getElementById('paint');
+var ctx = canvas.getContext('2d');
+ 
+var sketch = document.getElementById('sketch');
+var sketch_style = getComputedStyle(sketch);
+canvas.width = 500;
+canvas.height = 250;
+
+var mouse = {x: 0, y: 0};
+ 
+/* Mouse Capturing Work */
+canvas.addEventListener('mousemove', function(e) {
+  mouse.x = e.pageX - this.offsetLeft;
+  mouse.y = e.pageY - this.offsetTop;
+}, false);
+
+/* Drawing on Paint App */
+ctx.lineJoin = 'round';
+ctx.lineCap = 'round';
+
+ctx.strokeStyle = "red";
+function getColor(colour){ctx.strokeStyle = colour;}
+
+function getSize(size){ctx.lineWidth = size;}
+
+
+//ctx.strokeStyle = 
+//ctx.strokeStyle = document.settings.colour[1].value;
+ 
+canvas.addEventListener('mousedown', function(e) {
+    ctx.beginPath();
+    ctx.moveTo(mouse.x, mouse.y);
+ 
+    canvas.addEventListener('mousemove', onPaint, false);
+}, false);
+ 
+canvas.addEventListener('mouseup', function() {
+    canvas.removeEventListener('mousemove', onPaint, false);
+}, false);
+ 
+var onPaint = function() {
+    ctx.lineTo(mouse.x, mouse.y);
+    ctx.stroke();
+};
+</script>
+<style>
+  
+*{font-family:sans-serif;}
+
+#settings { display: block; text-align:center}
+
+
+#paint {border: 1px solid black; background : #333333; margin-left: auto; margin-right: auto; display: block;}
+</style>
+<div id="sketch">
+  <canvas id="paint"></canvas>
+</div>
+
+<div id="settings"> Colours
+  <button onclick="getColor('blue');">Blue</button>
+  <button onclick="getColor('red');">Red</button>
+  <button onclick="getColor('green');">Green</button>
+  <button onclick="getColor('white');">White</button>
+  <button onclick="getColor('#333333');">Eraser</button>
+</div>
+
+<div id="settings"> Brush Size
+  <button onclick="getSize('2');">Small</button>
+  <button onclick="getSize('5');">Med</button>
+  <button onclick="getSize('10');">Large</button>
+  <button onclick="getSize('20');">X Large</button>
+</div>
