--- a/html.html
+++ b/html.html
@@ -53,6 +53,7 @@ var onPaint = function() {
 
 #paint {border: 1px solid black; background : #333333; margin-left: auto; margin-right: auto; display: block;}
 </style>
+<body>
 <div id="sketch">
   <canvas id="paint"></canvas>
 </div>
@@ -71,3 +72,4 @@ var onPaint = function() {
   <button onclick="getSize('10');">Large</button>
   <button onclick="getSize('20');">X Large</button>
 </div>
+  </body>
